# template-clean-architecture

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: app_config.py  main.py
src/infra/postgres/: database.py  uow.py
src/infra/postgres/alembic/: env.py
src/infra/postgres/alembic/versions/: ae2ff2d6ee70_.py
src/infra/postgres/models/: __init__.py  author.py  author_book.py  base.py  book.py
src/infra/postgres/storage/: author.py  base.py  book.py
src/modules/base/: controller.py
src/modules/book/: controller.py  router.py  schemas.py
tests/: conftest.py  test_books.py
