[project]
name = "template-clean-architecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "mypy>=1.20.0",
    "pydantic-settings>=2.13.1",
    "pytest-asyncio>=1.3.0",
    "uvicorn>=0.44.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
combine-as-imports = true
